docs/managed_vms/endpoints: add /auth/info/firebase
Pull-Request: #57
